--- a/01-random-color-generator/practice/index.css
+++ b/01-random-color-generator/practice/index.css
@@ -45,6 +45,8 @@
   }
 
 
+
+  /* global styles */
 *, ::after, ::before {
     margin: 0;
     padding: 0;
@@ -124,6 +126,7 @@ p {
     }
 }
 
+/* section */
 .section {
     padding: 5rem 0;
 }
@@ -146,9 +149,98 @@ main {
     place-items: center;
 }
 
+/* nav */
 nav {
     background: var(--clr-white);
     height: 3rem;
     display: grid;
-    
+    align-items: center;
+    border-bottom: solid 3px var(--clr-black);
 }
+
+.nav-center {
+    width: 90vw;
+    max-width: var(--fixed-width);
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.nav-center h4 {
+    margin-bottom: 0;
+    color:  var(--clr-black);
+    font-size: 1.1rem;
+}
+
+.nav-links {
+    display: flex;
+
+}
+
+nav a {
+    text-transform: capitalize;
+    font-weight: 700;
+    font-size: 1rem;
+    color: var(--clr-primary-1);
+    letter-spacing: var(--spacing);
+    margin-right: 1rem;
+}
+
+nav a:hover {
+    color: var(--clr-primary-5);
+
+}
+
+/* container */
+main {
+    min-height: calc(100vh - 3rem);
+    display: flex;
+    flex-direction: column;
+    place-items: center;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.container {
+    text-align: center  ;
+
+}
+
+.container h2 {
+    background-color: var(--clr-black);
+    color: white;
+    padding: 1rem;
+    border-radius: var(--radius);
+    margin-bottom: 2.5rem;
+
+}
+
+.color {
+    color: white;
+}
+
+.btn-hero {
+    font-family: var(--ff-primary);
+    text-transform: uppercase;
+    background: transparent;
+    color: var(--clr-black);
+    letter-spacing: var(--spacing);
+    display: inline-block;
+    font-weight: 700;
+    transition: var(--transition);
+    border: 2px solid black;
+    cursor: pointer;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+    border-radius: var(--radius);
+    font-size: 1rem;
+    padding: 0.75rem 1.25rem;
+}
+
+.btn-hero:hover {
+    color: white;
+    background-color: black;
+}
+
