--- a/04-navbar/practice/index.css
+++ b/04-navbar/practice/index.css
@@ -151,104 +151,97 @@ main {
   place-items: center;
 }
 
-
+/*
+=============== 
+Navbar
+===============
+*/
 nav {
-    background: var(--clr-white);
-    box-shadow: var(--light-shadow);
+  background: var(--clr-white);
+  box-shadow: var(--light-shadow);
 }
-
-.nav-center {
+.nav-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+}
+.nav-toggle {
+  font-size: 1.5rem;
+  color: var(--clr-primary-5);
+  background: transparent;
+  border-color: transparent;
+  transition: var(--transition);
+  cursor: pointer;
+}
+.nav-toggle:hover {
+  color: var(--clr-primary-1);
+  transform: rotate(90deg);
+}
+.logo {
+  height: 40px;
+}
+.links a {
+  color: var(--clr-grey-3);
+  font-size: 1rem;
+  text-transform: capitalize;
+  letter-spacing: var(--spacing);
+  display: block;
+  padding: 0.5rem 1rem;
+  transition: var(--transition);
+}
+.links a:hover {
+  background: var(--clr-primary-8);
+  color: var(--clr-primary-5);
+  padding-left: 1.5rem;
+}
+.social-icons {
+  display: none;
+}
+.links {
+  height: 0;
+  overflow: hidden;
+  transition: var(--transition);
+}
+.show-links {
+  height: 10rem;
+}
+@media screen and (min-width: 800px) {
+  .nav-center {
     max-width: 1170px;
     margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 1rem;
-}
-
-.nav-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1rem;
-}
-
-.nav-toggle {
-    font-size: 1.5rem;
-    color: var(--clr-primary-5);
-    background-color: transparent;
-    border-color: transparent;
-    transition: var(--transition);
-    cursor: pointer;
-}
-
-.nav-toggle:hover {
-    color: var(--clr-primary-1);
-    transform: rotate(90deg);
-}
-
-.logo {
-    height: 40px;
-}
-
-.links a {
-    color: var(--clr-grey-3);
-    font-size: 1rem;
-    text-transform: capitalize;
-    letter-spacing: var(--spacing);
-    display: block;
-    padding: 0.5rem 1rem;
-    transition: var(--transition);
-}
-
-.links a:hover {
-    background: var(--clr-primary-8);
-    color: var(--clr-primary-5);
-    padding-left: 1.5rem;
-}
-
-.social-icons {
+  }
+  .nav-header {
+    padding: 0;
+  }
+  .nav-toggle {
     display: none;
-}
-
-.links {
-    height: 0;
-    overflow: hidden;
+  }
+  .links {
+    height: auto;
+    display: flex;
+  }
+  .links a {
+    padding: 0;
+    margin: 0 0.5rem;
+  }
+  .links a:hover {
+    padding: 0;
+    background: transparent;
+  }
+  .social-icons {
+    display: flex;
+  }
+  .social-icons a {
+    margin: 0 0.5rem;
+    color: var(--clr-primary-5);
     transition: var(--transition);
-}
-
-.show-links {
-    height: 10rem;
-}
-
-@media screen and (min-width:800px) {
-    .nav-header {
-        padding: 0;
-    }
-    .nav-toggle {
-        display: none;
-    }
-    .links {
-        height: auto;
-        display: flex;
-    }
-    .links a {
-        padding: 0;
-        margin: 0 0.5rem;
-    }
-    .links a:hover {
-        padding: 0;
-        background: transparent;
-    }
-    .social-links {
-        display: flex;
-    }
-    .social-ions a {
-        margin: 0 0.5rem;
-        color: var(--clr-primary-5);
-        transform: var(--transition);
-    }
-    .social-icons a:hover {
-        color: var(--clr-primary-7);
-    }
+  }
+  .social-icons a:hover {
+    color: var(--clr-primary-7);
+  }
 }
